--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="no_items_organisations">No organisations found!</string>
     <string name="error_updating_items">Couldn\'t update items!</string>
     <string name="error_loading_items">Couldn\'t load items!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
