--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="no_items_organisations">No organisations found!</string>
     <string name="error_updating_items">Couldn\'t update items!</string>
     <string name="error_loading_items">Couldn\'t load items!</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_details_login_string">Username:</string>
+    <string name="user_details_id_string">Id:</string>
+    <string name="user_details_type_string">Type:</string>
+    <string name="user_details_admin_string">Admin:</string>
+    <string name="user_details_button_string">See on website</string>
+    <string name="user_details_coming_soon">One day I will wake up feeling super great and add a list of repos here. Or maybe not:)</string>
+    <string name="avatar_content_description">User avatar</string>
 </resources>
